--- a/playground/app.html
+++ b/playground/app.html
@@ -176,6 +176,12 @@
                             <a class="dropdown-item">item 3</a>
                         </dexih-button-dropdown>
 
+                        <dexih-button-dropdown text="drop down class" buttonClass="btn btn-outline-secondary">
+                            <a class="dropdown-item">item 1</a>
+                            <a class="dropdown-item">item 2</a>
+                            <a class="dropdown-item">item 3</a>
+                        </dexih-button-dropdown>
+
                         <dexih-button-dropdown text="drop down no carrot" [hideCarrot]="true">
                             <a class="dropdown-item">item 1</a>
                             <a class="dropdown-item">item 2</a>
