--- a/playground/app.html
+++ b/playground/app.html
@@ -190,6 +190,14 @@
                             <a class="dropdown-item">item 3</a>
                         </dexih-button-dropdown>
 
+                        <dexih-button-dropdown text="drop down manual" buttonClass="btn btn-outline-secondary" #manualDropDown [autoClose]="false" (onOpenChange)="window.alert('open/close changed')" >
+                            <a class="dropdown-item" (click)="manualDropDown.hideDropdown()">closes dropdown</a>
+                            <a class="dropdown-item">doesn't close dropdown</a>
+                        </dexih-button-dropdown>
+
+                        <dexih-button (click)="manualDropDown.hideDropdown()">Hide Dropdown</dexih-button>
+                        <dexih-button (click)="manualDropDown.showDropdown()">Show Dropdown</dexih-button>
+
                         <dexih-button-dropdown text="drop down class" buttonClass="btn btn-outline-secondary">
                             <a class="dropdown-item">item 1</a>
                             <a class="dropdown-item">item 2</a>
