fixed issue with playground not running

--- a/playground/index.html
+++ b/playground/index.html
@@ -23,6 +23,6 @@
   </head>
 
   <body>
-    <app>Loading AppComponent content here ...</app>
+    <app-component>Loading AppComponent content here ...</app-component>
   </body>
 </html>
