added autoCompact to dropdown button

--- a/playground/app.html
+++ b/playground/app.html
@@ -210,7 +210,7 @@
                         <dexih-button-view></dexih-button-view>
                         <dexih-button-link>this is a link button</dexih-button-link>
 
-                        <dexih-button-dropdown text="drop down">
+                        <dexih-button-dropdown text="drop down" [autoCompact]="false">
                             <a class="dropdown-item" (click)="this. show('hi there')">item 1</a>
                             <a class="dropdown-item">item 2</a>
                             <a class="dropdown-item">item 3</a>
