added chart button

--- a/playground/app.html
+++ b/playground/app.html
@@ -247,6 +247,7 @@
                         <dexih-button-save-local></dexih-button-save-local>
                         <dexih-button-validate></dexih-button-validate>
                         <dexih-button-view></dexih-button-view>
+                        <dexih-button-chart></dexih-button-chart>
                         <dexih-button-link>this is a link button</dexih-button-link>
 
                         <dexih-button-dropdown text="drop down" [autoCompact]="false">
