added padding, markup to notes

--- a/playground/app.html
+++ b/playground/app.html
@@ -88,7 +88,7 @@
                 <form-input placeholder="No labels"></form-input>
                 <form-input label="input label" labelLeft="label left" note="a note to describe the input" placeholder="input something"></form-input>
                 <form-input label="input label" note="a note to describe the input" placeholder="input with icon" iconClass="fa fa-pie-chart"></form-input>
-                <form-input label="input with error" note="a note to describe the input" errors="this is invalid" placeholder="input something"
+                <form-input label="input with error" note="a note to describe the input and [link](http://dataexpertsgroup.com)" errors="this is invalid" placeholder="input something"
                     iconClass="fa fa-pie-chart"></form-input>
                 <form-input label="input with sub label" subLabel="the label" placeholder="input something" iconClass="fa fa-pie-chart"></form-input>
                 <form-input label="input disabled" [disabled]="true" placeholder="input something" iconClass="fa fa-pie-chart" value="can't change this text"></form-input>
