fixed bug when selecting null value

--- a/playground/app.html
+++ b/playground/app.html
@@ -132,7 +132,7 @@
                 <form-select name="formSelect" label="Simple Select" [items]="['item1', 'item2','item3']" (ngModelChange)="selectChange($event)" [enableTextEntry]="true" [(ngModel)]="selectedItem" [ngModelOptions]="{standalone: true}" [(textValue)]="textValue" ></form-select>
                 
                 <form-select label="No Filter" [items]="['item1', 'item2','item3']" [enableFilter]="false"></form-select>
-                <form-select label="Default Value" [allowNullSelect]="true" [items]="['item1', 'item2','item3']" [enableTextEntry]="true"></form-select>
+                <form-select label="Default Value" [allowNullSelect]="true" selectNullMessage="Use null value" [items]="['item1', 'item2','item3']" [enableTextEntry]="true"></form-select>
                 
                 <form-select label="No Items" [items]="[]" [enableTextEntry]="true" iconClass="fa fa-pie-chart"></form-select>
 
