fixed issue with checkbox content not displaying

--- a/playground/app.html
+++ b/playground/app.html
@@ -203,6 +203,8 @@
             <form>
                 <form-checkbox></form-checkbox>
                 <form-checkbox label="Simple Checkbox"></form-checkbox>
+                <form-checkbox>Check box with text content</form-checkbox>
+                <form-checkbox [border]="true">Check box with text content and border</form-checkbox>
                 <form-checkbox label="Border" [border]="true"></form-checkbox>
                 <form-checkbox label="Checkbox with note" note="this describes the checkbox"></form-checkbox>
                 <form-checkbox label="Checkbox with error" errors="this checkbox has errors"></form-checkbox>
